--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Acces"
-        android:backgroundTint=" #C4C4C4"></Button>
+        android:backgroundTint="@color/btn_color"></Button>
     <Button
         android:id="@+id/registre"
         android:layout_width="200dp"
@@ -39,7 +39,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
         android:text="Menjar"
-        android:backgroundTint=" #C4C4C4"></Button>
+        android:backgroundTint="@color/btn_color"></Button>
 
     <ImageView
         android:layout_width="match_parent"
