--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -5,7 +5,35 @@
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin"
     android:id="@+id/scan_lay">
-
+    <Button
+        android:id="@+id/lunch_sat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/surfaceView"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="20dp"
+        android:text="lunch_sat"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="100dp"></Button>
+    <Button
+        android:id="@+id/dinner_sat"
+        android:layout_toRightOf="@id/lunch_sat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="sopar diss"
+        android:layout_above="@id/surfaceView"
+        android:layout_marginBottom="30dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="100dp"></Button>
+    <Button
+        android:id="@+id/lunch_sun"
+        android:layout_toRightOf="@id/dinner_sat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lunch_sat"
+        android:layout_above="@id/surfaceView"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="100dp"></Button>
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
