--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,19 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relId"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:id="@+id/relId"
-    android:background="@color/background">
+    android:background="@color/background"
+    tools:context=".MainActivity">
+
     <ImageView
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:src="@drawable/logo_gris"></ImageView>
+
     <Button
         android:id="@+id/acces"
         android:layout_width="200dp"
@@ -20,8 +22,9 @@
         android:layout_below="@id/logo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop"
-        android:text="Acces"
-        android:backgroundTint="@color/btn_color"></Button>
+        android:backgroundTint="@color/btn_color"
+        android:text="Acces"></Button>
+
     <Button
         android:id="@+id/registre"
         android:layout_width="200dp"
@@ -29,8 +32,9 @@
         android:layout_below="@id/acces"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop"
-        android:text="Registre"
-        android:backgroundTint="@color/btn_color"></Button>
+        android:backgroundTint="@color/btn_color"
+        android:text="Registre"></Button>
+
     <Button
         android:id="@+id/menjar"
         android:layout_width="200dp"
@@ -38,56 +42,62 @@
         android:layout_below="@id/registre"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/marginTop"
-        android:text="Menjar"
-        android:backgroundTint="@color/btn_color"></Button>
+        android:backgroundTint="@color/btn_color"
+        android:text="Menjar"></Button>
+
     <ImageView
         android:id="@+id/refresh"
-        android:src="@drawable/refresh"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/menjar"
+        android:layout_marginLeft="120dp"
         android:layout_marginTop="65dp"
-        android:layout_marginLeft="120dp"></ImageView>
+        android:src="@drawable/refresh"></ImageView>
+
     <TextView
         android:id="@+id/users"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/menjar"
-        android:layout_marginTop="@dimen/marginTop"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="@dimen/marginTop"
         android:layout_toRightOf="@id/refresh"
         android:text="users -> "></TextView>
+
     <TextView
         android:id="@+id/regUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/users"
-        android:layout_toRightOf="@id/refresh"
         android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/refresh"
         android:text="registered users -> "></TextView>
+
     <TextView
         android:id="@+id/esmorzarUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/regUsers"
-        android:layout_toRightOf="@id/refresh"
         android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/refresh"
         android:text="users(esmorzar) -> "></TextView>
+
     <TextView
         android:id="@+id/dinarUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/esmorzarUsers"
-        android:layout_toRightOf="@id/refresh"
         android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/refresh"
         android:text="users(dinar) -> "></TextView>
+
     <TextView
         android:id="@+id/soparUsers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/dinarUsers"
-        android:layout_toRightOf="@id/refresh"
         android:layout_marginLeft="20dp"
+        android:layout_toRightOf="@id/refresh"
         android:text="users(dinar) -> "></TextView>
 
     <ImageView
