--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -7,40 +7,42 @@
     android:padding="@dimen/activity_horizontal_margin">
 
     <Button
-        android:id="@+id/lunch_sat"
+        android:id="@+id/dinner_fri"
+        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/surfaceView"
-        android:layout_margin="10dp"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
-        android:layout_toLeftOf="@id/dinner_sat"
+        android:text="dinner_fri"></Button>
+    <Button
+        android:id="@+id/lunch_sat"
+        android:layout_margin="3dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/surfaceView"
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="30dp"
+        android:layout_toRightOf="@id/dinner_fri"
         android:text="lunch_sat"></Button>
 
     <Button
         android:id="@+id/dinner_sat"
+        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/surfaceView"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:bottomLeftRadius="10dp"
-        android:bottomRightRadius="10dp"
-
-        android:text="sopar diss"
-        android:topLeftRadius="10dp"
-        android:topRightRadius="10dp"></Button>
+        android:layout_marginTop="100dp"
+        android:layout_marginBottom="30dp"
+        android:layout_toRightOf="@id/lunch_sat"
+        android:text="dinner_sat"></Button>
 
     <Button
         android:id="@+id/lunch_sun"
+        android:layout_margin="3dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/surfaceView"
-        android:layout_margin="10dp"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
         android:layout_toRightOf="@id/dinner_sat"
@@ -49,7 +51,7 @@
     <SurfaceView
         android:id="@+id/surfaceView"
         android:layout_width="match_parent"
-        android:layout_height="350dp"
+        android:layout_height="600dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true" />
