--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -4,7 +4,7 @@
     android:id="@+id/scan_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/activity_horizontal_margin">
+    android:background="@drawable/back">
     <Button
         android:id="@+id/lunch_sat"
         android:layout_margin="3dp"
@@ -13,9 +13,13 @@
         android:layout_above="@id/surfaceView"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
-        android:text="lunch_sat"></Button>
+        android:layout_toLeftOf="@id/dinner_sat"
+        android:text="lunch_sat"
+        android:textAllCaps="false"
+        android:background="@color/white">
+    </Button>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/dinner_sat"
         android:layout_margin="3dp"
         android:layout_width="wrap_content"
@@ -23,10 +27,12 @@
         android:layout_above="@id/surfaceView"
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
-        android:layout_toRightOf="@id/lunch_sat"
-        android:text="dinner_sat"></Button>
+        android:layout_centerHorizontal="true"
+        android:text="dinner_sat"
+        android:textAllCaps="false"
+        android:background="@color/white"></androidx.appcompat.widget.AppCompatButton>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/lunch_sun"
         android:layout_margin="3dp"
         android:layout_width="wrap_content"
@@ -35,7 +41,9 @@
         android:layout_marginTop="100dp"
         android:layout_marginBottom="30dp"
         android:layout_toRightOf="@id/dinner_sat"
-        android:text="lunch_sun"></Button>
+        android:text="lunch_sun"
+        android:textAllCaps="false"
+        android:background="@color/white"></androidx.appcompat.widget.AppCompatButton>
 
     <SurfaceView
         android:id="@+id/surfaceView"
