--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
 	<color name="btn_color">#C4C4C4</color>
 	<color name="background">#FDFDFD</color>
+    <color name="white">#f7f7f2</color>
+    <color name="gray">#202225</color>
+    <color name="green">#77B134</color>
+    <color name="red">#C51117</color>
 </resources>
